--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "dependencies": {
-        "connection-tester": ">=0.2.1",
-        "tr-064": ">=0.2.0"
+        "@seydx/fritzbox": "^2.3.1"
     }
 }
